Accessibility shouldn't skip continuations in layout tree

Code to walk the layout tree for accessibility had a subtle bug
when encountering continuations, resulting in strange corner
cases where content could be completely missing from the
accessibility tree.

This patch switches to a new, simpler algorithm to walk the
layout tree for accessibility. It's simpler to explain and
requires less code.

All existing tests pass, included are three new
regression tests demonstrating cases that failed previously,
plus another simple test illustrating the importance of
handling continuations correctly.

Bug: 834653

Change-Id: I0704e79c94332862065e2976b90de61697f7f83f
Reviewed-on: https://chromium-review.googlesource.com/c/1292870
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Alice Boxhall <aboxhall@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602051}
Former-commit-id: 99bfce414a10e56ed93b8baef6d9d13651596c1c